 - GBA Memory: Misaligned SRAM writes are ignored
 - GBA Serialize: Fix serializing DMA transfer register
 - GBA Serialize: Fix audio serialization for desynced FIFOs
 - GBA Serialize: Fix audio DMA timing deserialization
 - GBA Video: Fix OAM not invalidating after reset (fixes mgba.io/i/1630)
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
Other fixes:
 - Qt: Only dynamically reset video scale if a game is running
 - Qt: Fix race condition with proxied video events
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix color selection in asset view (fixes mgba.io/i/1648)
 - Qt: Fix missing OSD messages

0.8.0: (2020-01-21)
Features:
 - Improved logging configuration
 - One-Player BattleChip/Progress/Beast Link Gate support
 - Add Game Boy Color palettes for original Game Boy games
 - Debugger: Add unary operators and memory dereferencing
 - GB: Expose platform information to CLI debugger
 - Support Discord Rich Presence
 - Debugger: Add tracing to file
 - Enhanced map viewer, supporting bitmapped GBA modes and more displayed info
 - OpenGL renderer with high-resolution upscaling support
 - Experimental high level "XQ" audio for most GBA games
 - Interframe blending for games that use flicker effects
 - Frame inspector for dissecting and debugging rendering
 - Switch: Option to use built-in brightness sensor for Boktai
 - Ports: Ability to enable or disable all SGB features (closes mgba.io/i/1205)
 - Ports: Ability to crop SGB borders off screen (closes mgba.io/i/1204)
 - Cheats: Add support for loading Libretro-style cht files
 - GBA Cheats: Add support for loading EZ Flash-style cht files
 - Support for unlicensed Wisdom Tree Game Boy mapper
 - Qt: Add export button for tile view (closes mgba.io/i/1507)
 - Qt: Add recent game list clearing (closes mgba.io/i/1380)
 - GB: Yanking gamepak now supported
 - Qt: Memory range dumping (closes mgba.io/i/1298)
Emulation fixes:
 - GB: Fix using boot ROM with MMM01 games