@@ -18,8 +18,9 @@ mLOG_DECLARE_CATEGORY(GBA_VIDEO);
 
 enum {
 	VIDEO_HBLANK_PIXELS = 68,
-	VIDEO_HDRAW_LENGTH = 1006,
-	VIDEO_HBLANK_LENGTH = 226,
+	VIDEO_HDRAW_LENGTH = 960,
+	VIDEO_HBLANK_LENGTH = 272,
+	VIDEO_HBLANK_FLIP = 46,
 	VIDEO_HORIZONTAL_LENGTH = 1232,
 
 	VIDEO_VBLANK_PIXELS = 68,
